--- a/index.html
+++ b/index.html
@@ -79,89 +79,134 @@
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1 me-md-3">
-                            <h3 class="mb-0">BESSER</h3>
-                            <div class="subheading mb-3">Open Source Low-code Platform</div>
-                            <p>
-                                BESSER (BEtter Smart Software fastER) is an FNR-funded PEARL project, hosted via a joint
-                                structural collaboration lead by LIST and with the participation of SnT/UniLu.
-                                <br>
-                                <br>
-                                BESSER is a <a href="https://modeling-languages.com/welcome-to-the-low-modeling-revolution/">low-modeling</a> and <a href="https://modeling-languages.com/low-code-vs-model-driven/">low-code</a> open-source platform that enables users to model, generate,
-                                personalize and deploy smart and complex software systems.
-                                BESSER is based around our B-UML language and a number of generators built on top of it.
-                            </p>
-                            <div class="social-icons">
-                                <a class="social-icon" href="https://github.com/BESSER-PEARL"><span class="tooltip">GitHub</span><i class="fab fa-github"></i></a>
-                                <a class="social-icon" href="https://besser.readthedocs.io/en/latest/"><span class="tooltip">Documentation</span><i class="fa-solid fa-book"></i></a>
-                                <a class="social-icon" href="https://besser-pearl.github.io/website/"><span class="tooltip">Webpage</span><i class="fa-solid fa-globe"></i></a>
+
+                    <!-- BESSER-->
+                    <p>
+                        <a href="#" class="openPopup" data-popup="popup-project-besser"><b>BESSER</b></a>
+                        <br>
+                        Open Source Low-code Platform
+                    </p>
+                    <div class="popup-container" id="popup-project-besser">
+                        <div class="popup">
+                            <span class="close-btn">&times;</span>
+                            <div class="flex-grow-1 me-md-3">
+                                <h2 class="mb-0">BESSER</h2>
+                                <div class="subheading mb-3">Open Source Low-code Platform</div>
+                                <p>
+                                    BESSER (BEtter Smart Software fastER) is an FNR-funded PEARL project, hosted via a joint
+                                    structural collaboration lead by LIST and with the participation of SnT/UniLu.
+                                    <br>
+                                    <br>
+                                    BESSER is a <a href="https://modeling-languages.com/welcome-to-the-low-modeling-revolution/">low-modeling</a> and <a href="https://modeling-languages.com/low-code-vs-model-driven/">low-code</a> open-source platform that enables users to model, generate,
+                                    personalize and deploy smart and complex software systems.
+                                    BESSER is based around our B-UML language and a number of generators built on top of it.
+                                </p>
+                                <div class="social-icons">
+                                    <a class="social-icon" href="https://github.com/BESSER-PEARL"><span class="tooltip">GitHub</span><i class="fab fa-github"></i></a>
+                                    <a class="social-icon" href="https://besser.readthedocs.io/en/latest/"><span class="tooltip">Documentation</span><i class="fa-solid fa-book"></i></a>
+                                    <a class="social-icon" href="https://besser-pearl.github.io/website/"><span class="tooltip">Webpage</span><i class="fa-solid fa-globe"></i></a>
+                                </div>
                             </div>
+                            <img src="assets/img/blc.webp" alt="BESSER Low Code" class="img-fluid mt-3" style="width: 100vw;">
                         </div>
-                        <img src="assets/img/blc.webp" alt="BESSER Low Code" class="img-fluid mt-3" style="max-width: 600px;">
                     </div>
 
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1 me-md-3">
-                            <h3 class="mb-0">BESSER AGENTIC FRAMEWORK</h3>
-                            <div class="subheading mb-3">Agent design and implementation with Python</div>
-                            <p>
-                                The BESSER Agentic Framework (BAF), formerly known as <a href="https://livablesoftware.com/besser-bot-framework/">Bot Framework</a>, is part of the BESSER project. It aims to make the
-                                design and implementation of agents easier and accessible for everyone.
-                            </p>
-                            <div class="social-icons">
-                                <a class="social-icon" href="https://github.com/BESSER-PEARL/BESSER-Bot-Framework"><span class="tooltip">GitHub</span><i class="fab fa-github"></i></a>
-                                <a class="social-icon" href="https://besser-bot-framework.readthedocs.io/latest/"><span class="tooltip">Documentation</span><i class="fa-solid fa-book"></i></a>
+                    <!-- BESSER Agentic Framework-->
+                    <p>
+                        <a href="#" class="openPopup" data-popup="popup-project-BAF"><b>BESSER Agentic Framework</b></a>
+                        <br>
+                        Agent design and implementation with Python
+                    </p>
+                    <div class="popup-container" id="popup-project-BAF">
+                        <div class="popup">
+                            <span class="close-btn">&times;</span>
+                            <div class="flex-grow-1 me-md-3">
+                                <h2 class="mb-0">BESSER AGENTIC FRAMEWORK</h2>
+                                <div class="subheading mb-3">Agent design and implementation with Python</div>
+                                <p>
+                                    The BESSER Agentic Framework (BAF), formerly known as <a href="https://livablesoftware.com/besser-bot-framework/">Bot Framework</a>, is part of the BESSER project. It aims to make the
+                                    design and implementation of agents easier and accessible for everyone.
+                                </p>
+                                <div class="social-icons">
+                                    <a class="social-icon" href="https://github.com/BESSER-PEARL/BESSER-Bot-Framework"><span class="tooltip">GitHub</span><i class="fab fa-github"></i></a>
+                                    <a class="social-icon" href="https://besser-bot-framework.readthedocs.io/latest/"><span class="tooltip">Documentation</span><i class="fa-solid fa-book"></i></a>
+                                </div>
                             </div>
+                            <img src="assets/img/bbf.webp" alt="BESSER Bot Framework" class="img-fluid mt-3" style="width: 100vw;">
                         </div>
-                        <img src="assets/img/bbf.webp" alt="BESSER Bot Framework" class="img-fluid mt-3" style="width: 600px;">
                     </div>
 
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1 me-md-3">
-                            <h3 class="mb-0">AI SANDBOX LUXEMBOURG</h3>
-                            <div class="subheading mb-3">Making better AI systems</div>
-                            <p>
-                                Making sure that AI systems used in the EU are safe, transparent, traceable, non-discriminatory and environmentally friendly is a critical issue on which LIST wants to contribute with its scientific and technological expertise.
-                                This AI Sandbox is designed to help the Luxembourg ecosystem grow awareness and capabilities to improve the trustworthiness of AI models and reduce the risks for their users.
-                            </p>
-                            <div class="social-icons">
-                                <a class="social-icon" href="https://ai-sandbox.list.lu/"><span class="tooltip">Webpage</span><i class="fa-solid fa-globe"></i></a>
-                                <a class="social-icon" href="https://www.siliconluxembourg.lu/list-develops-ai-regulatory-sandboxes-and-releases-ethical-ai-leaderboard/"><span class="tooltip">Article</span><i class="fa-solid fa-link"></i></a>
+                    <!-- AI SANDBOX LUXEMBOURG-->
+                    <p>
+                        <a href="#" class="openPopup" data-popup="popup-project-aisandbox"><b>AI Sandbox Luxembourg</b></a>
+                        <br>
+                        Making better AI systems
+                    </p>
+                    <div class="popup-container" id="popup-project-aisandbox">
+                        <div class="popup">
+                            <span class="close-btn">&times;</span>
+                            <div class="flex-grow-1 me-md-3">
+                                <h2 class="mb-0">AI SANDBOX LUXEMBOURG</h2>
+                                <div class="subheading mb-3">Making better AI systems</div>
+                                <p>
+                                    Making sure that AI systems used in the EU are safe, transparent, traceable, non-discriminatory and environmentally friendly is a critical issue on which LIST wants to contribute with its scientific and technological expertise.
+                                    This AI Sandbox is designed to help the Luxembourg ecosystem grow awareness and capabilities to improve the trustworthiness of AI models and reduce the risks for their users.
+                                </p>
+                                <div class="social-icons">
+                                    <a class="social-icon" href="https://ai-sandbox.list.lu/"><span class="tooltip">Webpage</span><i class="fa-solid fa-globe"></i></a>
+                                    <a class="social-icon" href="https://www.siliconluxembourg.lu/list-develops-ai-regulatory-sandboxes-and-releases-ethical-ai-leaderboard/"><span class="tooltip">Article</span><i class="fa-solid fa-link"></i></a>
+                                </div>
                             </div>
+                            <img src="assets/img/ai-sandbox.png" alt="AI Sandbox" class="img-fluid mt-3" style="width: 100vw;">
                         </div>
-                        <img src="assets/img/ai-sandbox.png" alt="AI Sandbox" class="img-fluid mt-3" style="max-width: 600px;">
                     </div>
 
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1 me-md-3">
-                            <h3 class="mb-0">DATABOT</h3>
-                            <div class="subheading mb-3">Automatic generation of bots</div>
-                            <p>
-                                With this platform, you can create bots (or agents) to answer questions about a specific data source. It allows the automatic generation of a chat/voice bot swarm to attend all the data sources in an Open Data Portal.
-                            </p>
-                            <div class="social-icons">
-                                <a class="social-icon" href="https://github.com/BESSER-PEARL/databot"><span class="tooltip">GitHub</span><i class="fab fa-github"></i></a>
+                    <!-- DATABOT-->
+                    <p>
+                        <a href="#" class="openPopup" data-popup="popup-project-DATABOT"><b>DataBot</b></a>
+                        <br>
+                        Automatic generation of bots
+                    </p>
+                    <div class="popup-container" id="popup-project-DATABOT">
+                        <div class="popup">
+                            <span class="close-btn">&times;</span>
+                            <div class="flex-grow-1 me-md-3">
+                                <h2 class="mb-0">DATABOT</h2>
+                                <div class="subheading mb-3">Automatic generation of bots</div>
+                                <p>
+                                    With this platform, you can create bots (or agents) to answer questions about a specific data source. It allows the automatic generation of a chat/voice bot swarm to attend all the data sources in an Open Data Portal.
+                                </p>
+                                <div class="social-icons">
+                                    <a class="social-icon" href="https://github.com/BESSER-PEARL/databot"><span class="tooltip">GitHub</span><i class="fab fa-github"></i></a>
+                                </div>
                             </div>
+                            <img src="assets/img/databot.png" alt="Databot" class="img-fluid mt-3" style="width: 100vw;">
                         </div>
-                        <img src="assets/img/databot.png" alt="Databot" class="img-fluid mt-3" style="max-width: 600px;">
                     </div>
 
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1 me-md-3">
-                            <h3 class="mb-0">XATKIT</h3>
-                            <div class="subheading mb-3">Design it once, deploy it everywhere</div>
-                            <p>
-                                Xatkit is a java-based bot framework, created to reduce boilerplate code, complex API understanding, and technical details to facilitate the definition and deployment of your bots. Xatkit helps you focus on what really matters: the conversation logic you want to embed in your chatbot.
-                            </p>
-                            <div class="social-icons">
-                                <a class="social-icon" href="https://github.com/xatkit-bot-platform/xatkit"><span class="tooltip">GitHub</span><i class="fab fa-github"></i></a>
-                                <a class="social-icon" href="https://xatkit.com/"><span class="tooltip">Webpage</span><i class="fa-solid fa-globe"></i></a>
+                    <!-- XATKIT-->
+                    <p>
+                        <a href="#" class="openPopup" data-popup="popup-project-XATKIT"><b>Xatkit</b></a>
+                        <br>
+                        Design it once, deploy it everywhere
+                    </p>
+                    <div class="popup-container" id="popup-project-XATKIT">
+                        <div class="popup">
+                            <span class="close-btn">&times;</span>
+                            <div class="flex-grow-1 me-md-3">
+                                <h2 class="mb-0">XATKIT</h2>
+                                <div class="subheading mb-3">Design it once, deploy it everywhere</div>
+                                <p>
+                                    Xatkit is a java-based bot framework, created to reduce boilerplate code, complex API understanding, and technical details to facilitate the definition and deployment of your bots. Xatkit helps you focus on what really matters: the conversation logic you want to embed in your chatbot.
+                                </p>
+                                <div class="social-icons">
+                                    <a class="social-icon" href="https://github.com/xatkit-bot-platform/xatkit"><span class="tooltip">GitHub</span><i class="fab fa-github"></i></a>
+                                    <a class="social-icon" href="https://xatkit.com/"><span class="tooltip">Webpage</span><i class="fa-solid fa-globe"></i></a>
+                                </div>
                             </div>
+                        <img src="assets/img/xatkit.png" alt="Xatkit" class="img-fluid mt-3" style="width: 100vw;">
                         </div>
-                        <img src="assets/img/xatkit.png" alt="Xatkit" class="img-fluid mt-3" style="max-width: 400px;">
                     </div>
-
                 </div>
             </section>
             <hr class="m-0" />
