--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <p>
-                                <a href="https://doi.org/10.1145/3646548.3676599"><b>Exploring the Use of Software Product Lines for the Combination of Machine Learning Models</b></a>
+                                <a href="papers/html/paper4.html"><b>Exploring the Use of Software Product Lines for the Combination of Machine Learning Models</b></a>
                                 <br>
                                 <b>Best Demonstrations and Tools Paper Award</b>
                                 <br>
@@ -230,7 +230,7 @@
                             </p>
 
                             <p>
-                                <a href="https://doi.org/10.1145/3640794.3665577"><b>Automatic Generation of Conversational Interfaces for Tabular Data Analysis</b></a>
+                                <a href="papers/html/paper3.html"><b>Automatic Generation of Conversational Interfaces for Tabular Data Analysis</b></a>
                                 <br>
                                 Marcos Gomez-Vazquez, Jordi Cabot and Robert Clarisó
                                 <br>
@@ -238,7 +238,7 @@
                             </p>
 
                             <p>
-                                <a href="https://doi.org/10.1007/978-3-031-61007-3_16"><b>Building BESSER: an open-source low-code platform</b></a>
+                                <a href="papers/html/paper2.html"><b>Building BESSER: an open-source low-code platform</b></a>
                                 <br>
                                 Iván Alfonso, Aaron Conrardy, Armen Sulejmani, Atefeh Nirumand, Fitash Ul Haq, Marcos Gomez-Vazquez, Jean-Sébastien Sottet and Jordi Cabot
                                 <br>
@@ -247,7 +247,7 @@
                                 EMMSAD 2024 Conference. Limassol, Cyprus
                             </p>
                             <p>
-                                <a href="https://ceur-ws.org/Vol-3744/"><b>A Leaderboard to Benchmark Ethical Biases in LLMs</b></a>
+                                <a href="papers/html/paper1.html"><b>A Leaderboard to Benchmark Ethical Biases in LLMs</b></a>
                                 <br>
                                 Marcos Gomez-Vazquez, Sergio Morales, German Castignani, Robert Clarisó, Aaron Conrardy, Louis Deladiennee, Samuel Renault and Jordi Cabot
                                 <br>
