--- a/papers/paper1.html
+++ b/papers/paper1.html
@@ -6,14 +6,14 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Marcos Gomez Vazquez</title>
-        <link rel="icon" type="image/x-icon" href="../../assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.7.1/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../../css/styles.css" rel="stylesheet" />
+        <link href="../css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top" style="padding-left: 0; padding-top: 20px; width: 800px; max-width: 92vw; margin: 0 auto;">
     <!-- Navigation-->
@@ -23,7 +23,7 @@
             <p>
                 Marcos Gomez-Vazquez, Sergio Morales, German Castignani, Robert Clarisó, Aaron Conrardy, Louis Deladiennee, Samuel Renault and Jordi Cabot
                 <br>
-                <a href="../pdf/paper1.pdf"><b>[pdf]</b></a>
+                <a href="pdf/paper1.pdf"><b>[pdf]</b></a>
             </p>
             <p style="text-align: left">
                 AIMMES 2024 | Workshop on AI bias: Measurements, Mitigation, Explanation Strategies
@@ -46,6 +46,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="../../js/scripts.js"></script>
+        <script src="../js/scripts.js"></script>
     </body>
 </html>
