--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                     <a class="social-icon" href="https://xatkit.com/"><span class="tooltip">Webpage</span><i class="fa-solid fa-globe"></i></a>
                                 </div>
                             </div>
-                        <img src="assets/img/xatkit.png" alt="Xatkit" class="img-fluid mt-3" style="width: 100vw;">
+                        <img src="assets/img/xatkit.png" alt="Xatkit" class="img-fluid mt-3" style="width: 200px;">
                         </div>
                     </div>
                 </div>
@@ -259,6 +259,7 @@
                     <div class="subheading mb-4">Blog Posts</div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <a href="https://ingenieriadesoftware.es/agentes-software/"><p>De bots a agentes, un nuevo framework open source para la creación de agentes software</p></a>
                             <a href="https://livablesoftware.com/besser-agentic-framework/"><p>From Bots to Agents: a new open source Agentic Framework</p></a>
                             <a href="https://livablesoftware.com/how-to-use-llms-and-rag-in-a-chatbot/"><p>How to use LLMs and RAG in a chatbot?</p></a>
                             <a href="https://ingenieriadesoftware.es/lineas-de-producto-para-automatizar-la-combinacion-de-modelos-de-machine-learning/"><p>Líneas de producto para automatizar la combinación de modelos de Machine Learning</p></a>
