--- a/index.html
+++ b/index.html
@@ -288,7 +288,9 @@
                             <h3 class="mb-0">Research Engineer at the Software Engineering RDI Unit</h3>
                             <div class="subheading mb-0"><i class="me-2 fa-solid fa-landmark"></i>Luxembourg Institute of Science and Technology (LIST)</div>
                             <div class="text-primary mb-3">June 2023 - Present</div>
+                            <!--
                             <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            -->
                         </div>
 
                     </div>
@@ -300,7 +302,9 @@
                             <h3 class="mb-0">Research Engineer at SOM Research Lab</h3>
                             <div class="subheading mb-0"><i class="me-2 fa-solid fa-landmark"></i>Universitat Oberta de Catalunya (UOC)</div>
                             <div class="text-primary mb-3">February 2021 - May 2023</div>
+                            <!--
                             <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            -->
                         </div>
                     </div>
                 </div>
@@ -319,7 +323,7 @@
                             <h3 class="mb-0">University of Luxembourg</h3>
                             <div class="subheading mb-0"><i class="me-2 fa-solid fa-graduation-cap"></i>Doctor of Philosophy (PhD)</div>
                             <div class="text-primary mb-3">November 2024 - Present</div>
-                            <p>Thesis: A low-code approach for the design, testing and implementation of multi-modal software systems</p>
+                            <p>Thesis: A low-code approach for the design, testing and implementation of multimodal software systems</p>
                         </div>
                     </div>
 
